--- a/heavycenter/src/main/res/layout/frag_main_order_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_order_detail.xml
@@ -157,7 +157,7 @@
             android:layout_marginRight="10dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/icon_hv_local"
+            android:src="@drawable/icon_hv_order_adddirver"
             android:layout_width="80dp"
             android:layout_height="35dp" />
 
