--- a/heavycenter/src/main/res/layout/frag_main_store_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_store_detail.xml
@@ -225,7 +225,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp">
 
-            <android.support.v7.widget.RecyclerView
+            <com.android.lib.view.LinearRecycleView
                 android:background="@color/white"
                 android:id="@+id/recycle"
                 android:scrollbars="vertical"
