--- a/heavycenter/src/main/res/layout/item_myce_unit_bind.xml
+++ b/heavycenter/src/main/res/layout/item_myce_unit_bind.xml
@@ -31,8 +31,8 @@
             android:layout_marginLeft="15dp"
             app:layout_constraintBottom_toBottomOf="@+id/iv_sel"
             app:layout_constraintLeft_toRightOf="@+id/iv_sel"
-            android:textSize="17sp"
-            android:textColor="@color/color_grey_900"
+            android:textSize="@dimen/dimen_text_size_unit"
+            android:textColor="@color/color_grey_700"
             android:text="@{item_myce_unit_bind.companyName}"
             android:id="@+id/tv_com_name"
             android:layout_width="wrap_content"
@@ -43,7 +43,7 @@
             android:gravity="bottom"
             app:layout_constraintTop_toBottomOf="@+id/tv_com_name"
             app:layout_constraintLeft_toLeftOf="@+id/tv_com_name"
-            android:textSize="17sp"
+            android:textSize="@dimen/dimen_text_size_unit"
             android:textColor="@color/gray"
             android:text="@{item_myce_unit_bind.contactName}"
             android:id="@+id/tv_mana_name"
