--- a/heavycenter/src/main/res/layout/frag_acct_repwd.xml
+++ b/heavycenter/src/main/res/layout/frag_acct_repwd.xml
@@ -7,13 +7,15 @@
     </data>
 
 
-        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/icon_hv_bg"
             android:orientation="vertical">
 
             <ImageView
+                style_common:layout_constraintLeft_toLeftOf="parent"
+                style_common:layout_constraintTop_toTopOf="parent"
                 android:src="@drawable/icon_hv_back"
                 android:layout_marginTop="20dp"
                 android:id="@+id/ftv_back"
@@ -29,116 +31,121 @@
                 android:textSize="17sp"
                 android:visibility="visible" />
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:gravity="center_horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <LinearLayout
-                    android:layout_weight="1"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"
-                    android:orientation="vertical"
-                    android:gravity="center_horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp">
 
-                    <TextView
-                        android:layout_marginTop="110dp"
-                        android:text="忘记密码"
-                        android:textColor="@color/white"
-                        android:textSize="18sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/title"
+                style_common:layout_constraintLeft_toLeftOf="parent"
+                style_common:layout_constraintTop_toTopOf="parent"
+                style_common:layout_constraintRight_toRightOf="parent"
+                android:layout_marginTop="100dp"
+                android:text="忘记密码"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
 
-                    <com.siweisoft.heavycenter.module.view.input.EditLoginAcctItem
-                        style_common:inputType="0"
-                        android:id="@+id/phone"
-                        style_common:txt_maxlenth="11"
-                        style_common:txt_mid = "请输入手机号"
-                        style_common:iv_left="@drawable/icon_hv_phone"
-                        android:layout_marginTop="30dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        />
 
-                    <com.siweisoft.heavycenter.module.view.input.EditLoginAcctItem
-                        android:id="@+id/code"
-                        android:layout_marginTop="5dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        style_common:iv_left="@drawable/icon_hv_pwd"
-                        style_common:boo_one = "true"
-                        style_common:txt_mid="请输入验证码" />
+            <com.siweisoft.heavycenter.module.view.input.EditLoginAcctItem
+                style_common:layout_constraintLeft_toLeftOf="parent"
+                style_common:layout_constraintRight_toRightOf="parent"
+                style_common:layout_constraintTop_toBottomOf="@+id/title"
+                style_common:inputType="0"
+                android:layout_marginLeft="35dp"
+                android:layout_marginRight="35dp"
+                android:id="@+id/phone"
+                style_common:txt_maxlenth="11"
+                style_common:txt_mid = "请输入手机号"
+                style_common:iv_left="@drawable/icon_hv_phone"
+                android:layout_marginTop="45dp"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                />
 
-                    <com.siweisoft.heavycenter.module.view.input.EditLoginAcctItem
-                        style_common:inputType="1"
-                        android:id="@+id/pwd"
-                        style_common:txt_mid = "设置新密码"
-                        style_common:iv_left="@drawable/icon_hv_pwd"
-                        android:layout_marginTop="5dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        />
-                    <com.siweisoft.heavycenter.module.view.input.EditLoginAcctItem
-                        style_common:inputType="1"
-                        android:id="@+id/repwd"
-                        style_common:txt_mid = "重复新密码"
-                        style_common:iv_left="@drawable/icon_hv_pwd"
-                        android:layout_marginTop="5dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        />
+            <com.siweisoft.heavycenter.module.view.input.EditLoginAcctItem
+                style_common:layout_constraintLeft_toLeftOf="@+id/phone"
+                style_common:layout_constraintRight_toRightOf="@+id/phone"
+                style_common:layout_constraintTop_toBottomOf="@+id/phone"
+                android:id="@+id/code"
+                android:layout_marginTop="5dp"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                style_common:iv_left="@drawable/icon_hv_pwd"
+                style_common:boo_one = "true"
+                style_common:txt_mid="请输入验证码" />
 
-                    <LinearLayout
-                        android:layout_marginTop="10dp"
-                        android:orientation="horizontal"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <TextView
-                            android:layout_marginLeft="10dp"
-                            android:textSize="13sp"
-                            android:text="密码为6-18位数字和字母"
-                            android:textColor="@color/white"
-                            android:layout_gravity="left"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
+            <com.siweisoft.heavycenter.module.view.input.EditLoginAcctItem
+                style_common:layout_constraintLeft_toLeftOf="@+id/code"
+                style_common:layout_constraintRight_toRightOf="@+id/code"
+                style_common:layout_constraintTop_toBottomOf="@+id/code"
+                style_common:inputType="1"
+                android:id="@+id/pwd"
+                style_common:txt_mid = "设置新密码"
+                style_common:iv_left="@drawable/icon_hv_pwd"
+                android:layout_marginTop="5dp"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                />
+
+            <com.siweisoft.heavycenter.module.view.input.EditLoginAcctItem
+                style_common:layout_constraintLeft_toLeftOf="@+id/pwd"
+                style_common:layout_constraintRight_toRightOf="@+id/pwd"
+                style_common:layout_constraintTop_toBottomOf="@+id/pwd"
+                style_common:inputType="1"
+                android:id="@+id/repwd"
+                style_common:txt_mid = "重复新密码"
+                style_common:iv_left="@drawable/icon_hv_pwd"
+                android:layout_marginTop="5dp"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                />
+
+            <TextView
+                android:id="@+id/v1"
+                android:layout_marginTop="10dp"
+                style_common:layout_constraintLeft_toLeftOf="@+id/repwd"
+                style_common:layout_constraintRight_toRightOf="@+id/repwd"
+                style_common:layout_constraintTop_toBottomOf="@+id/repwd"
+                android:layout_marginLeft="10dp"
+                android:textSize="13sp"
+                android:text="密码为6-18位数字和字母"
+                android:textColor="@color/white"
+                android:layout_gravity="left"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
 
 
-                    </LinearLayout>
+            <com.siweisoft.heavycenter.module.view.text.BgTextView
+                style_common:layout_constraintLeft_toLeftOf="@+id/v1"
+                style_common:layout_constraintRight_toRightOf="@+id/v1"
+                style_common:layout_constraintTop_toBottomOf="@+id/v1"
+                android:gravity="center"
+                android:id="@+id/regist"
+                android:text="保存"
+                android:layout_marginTop="30dp"
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
 
-                    <com.siweisoft.heavycenter.module.view.text.BgTextView
-                        android:gravity="center"
-                        android:id="@+id/regist"
-                        android:text="保存"
-                        android:layout_marginTop="30dp"
-                        android:paddingTop="2dp"
-                        android:paddingBottom="2dp"
+                android:singleLine="true"
+                android:textSize="22sp"
+                android:visibility="visible"
+                style_common:color_one="@color/color_hv_yelll"
+                style_common:stroke="0dp"
+                style_common:color_stroke="@color/red"
+                style_common:corner="20dp"
+                style_common:color_txt="@color/white"
 
-                        android:singleLine="true"
-                        android:textSize="22sp"
-                        android:visibility="visible"
-                        style_common:color_one="@color/color_hv_yelll"
-                        style_common:stroke="0dp"
-                        style_common:color_stroke="@color/red"
-                        style_common:corner="20dp"
-                        style_common:color_txt="@color/white"
+                style_common:color_two="@color/color_grey_400"
+                style_common:stroke_two="0dp"
+                style_common:color_stroke_two="@color/color_hv_yelll"
+                style_common:corner_two="20dp"
+                style_common:color_txt_two="@color/color_hv_yelll"
+                style_common:boo_one="true"
+                android:layout_width="0dp"
+                android:layout_height="40dp" />
 
-                        style_common:color_two="@color/color_grey_400"
-                        style_common:stroke_two="0dp"
-                        style_common:color_stroke_two="@color/color_hv_yelll"
-                        style_common:corner_two="20dp"
-                        style_common:color_txt_two="@color/color_hv_yelll"
-                        style_common:boo_one="true"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-        </RelativeLayout>
+        </android.support.constraint.ConstraintLayout>
 </layout>
