--- a/heavycenter/src/main/res/layout/frag_main_weigts_bottom.xml
+++ b/heavycenter/src/main/res/layout/frag_main_weigts_bottom.xml
@@ -54,18 +54,18 @@
             android:paddingTop="5dp"
             android:text="重新选择"
             android:textColor="@color/white"
-            android:textSize="15sp"
+            android:textSize="13sp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
 
         <com.siweisoft.heavycenter.module.view.circle.CircleBar
             android:id="@+id/circlebar"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerInParent="true"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="45dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -83,7 +83,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:textColor="@{frag_main_weigts_bottom.order.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
-            android:textSize="25sp" />
+            android:textSize="22sp" />
 
         <TextView
             android:gravity="left|center_vertical"
@@ -99,7 +99,7 @@
             android:layout_marginTop="2dp"
             android:text="车"
             android:textColor="@{frag_main_weigts_bottom.order.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
-            android:textSize="15sp" />
+            android:textSize="13sp" />
 
 
         <TextView
@@ -111,7 +111,7 @@
             tools:text="2333"
             android:text="@{frag_main_weigts_bottom.order.productName}"
             android:textColor="@color/black"
-            android:textSize="@dimen/dimen_recylce_item_title_txtsize"
+            android:textSize="@dimen/dimen_text_size_productionName"
             app:layout_constraintLeft_toRightOf="@+id/circlebar"
             app:layout_constraintTop_toTopOf="@+id/circlebar" />
 
@@ -124,7 +124,7 @@
             tools:text="2333"
             android:text="@{frag_main_weigts_bottom.order.specification}"
             android:textColor="@color/black"
-            android:textSize="@dimen/dimen_recylce_item_title_txtsize"
+            android:textSize="@dimen/dimen_text_size_productionName"
             app:layout_constraintBaseline_toBaselineOf="@+id/tv_goodname"
             app:layout_constraintBottom_toBottomOf="@+id/tv_goodname"
             app:layout_constraintLeft_toRightOf="@+id/tv_goodname" />
@@ -138,11 +138,11 @@
             android:layout_height="wrap_content"
             android:text="@{frag_main_weigts_bottom.order.type}"
             android:padding="1dp"
-            android:textColor="@color/white"
+            android:textColor="@color/color_text_type"
             app:layout_constraintTop_toTopOf="@+id/tv_comp"
             app:layout_constraintBottom_toBottomOf="@+id/tv_comp"
             app:layout_constraintLeft_toLeftOf="@+id/tv_goodname"
-            android:textSize="13sp" />
+            android:textSize="@dimen/dimen_text_size_type" />
 
         <TextView
             android:layout_marginTop="7dp"
@@ -154,7 +154,7 @@
             tools:text="上海绿地"
             android:text="@{frag_main_weigts_bottom.order.accessComName}"
             android:textColor="@color/black"
-            android:textSize="@dimen/hv_dimen_text_aaa"
+            android:textSize="@dimen/dimen_text_size_unit"
             app:layout_constraintTop_toBottomOf="@+id/tv_goodname"
             app:layout_constraintLeft_toRightOf="@+id/tv_type" />
 
@@ -185,7 +185,7 @@
                 android:singleLine="true"
                 android:text="预估发货净重"
                 android:textColor="@color/color_grey_400"
-                android:textSize="@dimen/hv_dimen_text" />
+                android:textSize="12sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -193,7 +193,7 @@
                 android:singleLine="true"
                 android:text="收货净重"
                 android:textColor="@color/color_grey_400"
-                android:textSize="@dimen/hv_dimen_text" />
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -211,7 +211,7 @@
                 android:singleLine="true"
                 android:text="@{frag_main_weigts_bottom.jzCN}"
                 android:textColor="@color/color_grey_400"
-                android:textSize="@dimen/hv_dimen_text" />
+                android:textSize="12sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -219,7 +219,7 @@
                 android:singleLine="true"
 
                 android:textColor="@color/color_grey_400"
-                android:textSize="@dimen/hv_dimen_text" />
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -240,7 +240,7 @@
                 android:singleLine="true"
                 android:text="预估发货毛重"
                 android:textColor="@color/color_grey_400"
-                android:textSize="@dimen/hv_dimen_text" />
+                android:textSize="12sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -248,7 +248,7 @@
                 android:singleLine="true"
                 android:text="收货毛重"
                 android:textColor="@color/color_grey_400"
-                android:textSize="@dimen/hv_dimen_text" />
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -267,7 +267,7 @@
                 android:singleLine="true"
                 android:text="@{frag_main_weigts_bottom.mzCN}"
                 android:textColor="@color/color_grey_400"
-                android:textSize="@dimen/hv_dimen_text" />
+                android:textSize="12sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -275,7 +275,7 @@
                 android:singleLine="true"
 
                 android:textColor="@color/color_grey_400"
-                android:textSize="@dimen/hv_dimen_text" />
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -295,7 +295,7 @@
                 android:singleLine="true"
                 android:text="@{frag_main_weigts_bottom.timeCN}"
                 android:textColor="@color/color_grey_400"
-                android:textSize="@dimen/hv_dimen_text" />
+                android:textSize="12sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -303,7 +303,7 @@
                 android:singleLine="true"
                 android:text="@{frag_main_weigts_bottom.timeCN}"
                 android:textColor="@color/color_grey_400"
-                android:textSize="@dimen/hv_dimen_text" />
+                android:textSize="12sp" />
         </LinearLayout>
 
         <com.siweisoft.heavycenter.module.view.text.BgTextView
@@ -313,14 +313,14 @@
             app:layout_constraintRight_toRightOf="parent"
             android:id="@+id/tv_save"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:paddingBottom="5dp"
-
-            android:paddingLeft="70dp"
-            android:paddingRight="70dp"
-            android:paddingTop="5dp"
+            android:paddingBottom="7dp"
+            android:layout_marginBottom="15dp"
+            android:paddingLeft="50dp"
+            android:paddingRight="50dp"
+            android:paddingTop="7dp"
             android:singleLine="true"
             android:text="保存"
             android:textSize="21sp"
