--- a/heavycenter/src/main/res/layout/frag_main_weigts_bottom_resel.xml
+++ b/heavycenter/src/main/res/layout/frag_main_weigts_bottom_resel.xml
@@ -48,7 +48,7 @@
             android:paddingTop="5dp"
             android:text="重新选择"
             android:textColor="@color/white"
-            android:textSize="15sp"
+            android:textSize="13sp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -60,8 +60,8 @@
                 app:layout_constraintBottom_toTopOf="@+id/tv_save_sel"
                 android:gravity="center"
                 android:id="@+id/tv_tips"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:includeFontPadding="false"
                 tools:text="此次称重信息将保存\n,您需要后续在订单中选择进行关联的称重信息"
                 android:textColor="@color/black"
@@ -76,14 +76,14 @@
             app:layout_constraintRight_toRightOf="parent"
             android:id="@+id/tv_save_sel"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:paddingBottom="5dp"
-
-            android:paddingLeft="70dp"
-            android:paddingRight="70dp"
-            android:paddingTop="5dp"
+            android:paddingBottom="7dp"
+            android:layout_marginBottom="15dp"
+            android:paddingLeft="50dp"
+            android:paddingRight="50dp"
+            android:paddingTop="7dp"
             android:singleLine="true"
             android:text="保存"
             android:textSize="21sp"
