--- a/heavycenter/src/main/res/layout/frag_main_weigts_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_weigts_detail.xml
@@ -68,10 +68,12 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:padding="1dp"
+                    android:includeFontPadding="false"
                     android:singleLine="true"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textSize="13sp"
+                    android:textSize="@dimen/dimen_text_size_type"
                     android:textColor="@color/black"
                     android:text="来自"
                     android:background="@drawable/bg_hv_sharp2_blue_solid"
@@ -90,11 +92,13 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:padding="1dp"
+                    android:includeFontPadding="false"
                     android:layout_marginLeft="10dp"
                     android:singleLine="true"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textSize="13sp"
+                    android:textSize="@dimen/dimen_text_size_type"
                     android:textColor="@color/black"
                     android:text="发往"
                     android:background="@drawable/bg_hv_sharp2_yell_solid"
