--- a/heavycenter/src/main/res/layout/frag_mana_user_info.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_user_info.xml
@@ -7,6 +7,7 @@
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
@@ -122,11 +123,12 @@
 
 
         <ImageView
+            tools:visibility="visible"
             android:visibility="gone"
             android:layout_marginLeft="60dp"
             android:id="@+id/iv_carlicenseno"
-            android:layout_width="160dp"
-            android:layout_height="120dp" />
+            android:layout_width="150dp"
+            android:layout_height="100dp" />
 
 
 
