--- a/heavycenter/src/main/res/layout/frag_myce_unit_bind_tip.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_bind_tip.xml
@@ -56,7 +56,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/iv_close"
                 android:layout_marginTop="5dp"
-                android:background="@color/gray"
+                android:background="@color/color_grey_300"
                 android:layout_width="match_parent"
                 android:layout_height="1dp" />
 
@@ -71,7 +71,7 @@
                 android:layout_marginTop="20dp"
                 android:textColor="@color/color_hv_yelll"
                 android:textSize="18sp"
-                android:text="将提交给该单位管理人员进行审核"
+                android:text="将提交给该单位管理人员\n进行审核"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
