--- a/heavycenter/src/main/res/layout/item_main_order_detail_begin.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_detail_begin.xml
@@ -65,7 +65,7 @@
             android:layout_gravity="bottom"
             android:gravity="center_vertical"
             android:singleLine="true"
-            android:textColor="@color/black"
+            android:textColor="@color/color_text_type"
             android:textSize="@dimen/dimen_text_size_type"
             android:text='@{item_main_order_detail_begin.type}'
             android:layout_width="wrap_content"
