--- a/heavycenter/src/main/res/layout/item_main_order_doing.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_doing.xml
@@ -24,8 +24,8 @@
 
         <com.siweisoft.heavycenter.module.view.circle.CircleBar
             android:id="@+id/circlebar"
-            android:layout_width="72dp"
-            android:layout_height="72dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             app:color_one="@{item_main_order_doing.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
             app:update="@{item_main_order_doing.percent}"
             android:layout_centerInParent="true"
@@ -85,13 +85,13 @@
                 android:maxEms="7"
                 android:singleLine="true"
                 android:textColor="@{item_main_order_doing.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
-                android:textSize="14sp" />
+                android:textSize="@dimen/dimen_text_size_weightnum" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="/"
-                android:textColor="@{item_main_order_doing.IDiliverCom?@color/color_hv_yelll:@color/color_hv_blue}"
+                android:textColor="@color/white"
                 android:textSize="14sp" />
 
             <TextView
@@ -103,7 +103,7 @@
                 android:maxEms="7"
                 android:singleLine="true"
                 android:textColor="@color/white"
-                android:textSize="14sp" />
+                android:textSize="@dimen/dimen_text_size_weightnum" />
         </LinearLayout>
 
 
@@ -131,6 +131,7 @@
 
 
         <TextView
+            android:includeFontPadding="false"
             android:id="@+id/tv_carno"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -158,7 +159,7 @@
             android:padding="1dp"
             android:singleLine="true"
             android:text="@{item_main_order_doing.type}"
-            android:textColor="@color/color_grey_900"
+            android:textColor="@color/color_text_type"
             android:textSize="@dimen/dimen_text_size_type"
            app:layout_constraintTop_toTopOf="@+id/tv_duimian"
             app:layout_constraintBottom_toBottomOf="@+id/tv_duimian"
