--- a/heavycenter/src/main/res/layout/item_main_store_check.xml
+++ b/heavycenter/src/main/res/layout/item_main_store_check.xml
@@ -6,7 +6,9 @@
             name="item_main_store_check"
             type="com.siweisoft.heavycenter.data.netd.mana.store.list.StoreDetail" />
     </data>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:layout_width="match_parent"
@@ -25,7 +27,7 @@
         <TextView
             android:textColor="@color/black"
             android:gravity="center"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:text="@{item_main_store_check.warehouseName}"
             android:layout_weight="1"
             android:layout_width="0dp"
@@ -38,9 +40,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content">
             <TextView
-                android:textColor="@color/black"
+                tools:text="仓库111"
+                android:textColor="@color/color_grey_500"
                 android:gravity="center"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:text="@{item_main_store_check.productName}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -51,9 +54,9 @@
                 android:paddingRight="10dp"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
-                android:textColor="@color/black"
+                android:textColor="@color/color_grey_500"
                 android:gravity="center"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:text="@{item_main_store_check.specifications}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -69,9 +72,9 @@
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/tv_current"
-                android:textColor="@color/black"
+                android:textColor="@color/color_grey_500"
                 android:gravity="center"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -90,16 +93,16 @@
                 android:paddingBottom="5dp"
                 android:textColor="@color/black"
                 android:gravity="center"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
         <TextView
             android:id="@+id/tv_after"
-            android:textColor="@color/black"
+            android:textColor="@color/color_grey_500"
             android:gravity="center"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
