--- a/heavycenter/src/main/res/layout/item_main_strans.xml
+++ b/heavycenter/src/main/res/layout/item_main_strans.xml
@@ -11,16 +11,16 @@
 
 
 
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:background="@drawable/bg_hv_sel_dark_light"
+        android:layout_height="120dp"
         android:foreground="?android:attr/selectableItemBackground"
         android:id="@+id/ll_trans"
-      android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
+        android:orientation="horizontal"
+      android:layout_marginLeft="7dp"
+        android:layout_marginRight="7dp"
+        android:layout_marginTop="7dp"
         >
 
 
@@ -43,7 +43,6 @@
 
             <android.support.constraint.ConstraintLayout
                 android:background="@{item_main_strans.IDiliverCom?@drawable/icon_hv_main_strains_yell_2:@drawable/icon_hv_main_strains_blue_2}"
-                android:layout_marginLeft="50dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -65,6 +64,7 @@
                 <View
                     android:id="@+id/v1"
                     android:layout_marginTop="5dp"
+                    android:layout_marginLeft="5dp"
                     app:layout_constraintTop_toBottomOf="@+id/tv_carlicenseno"
                     android:background="@color/color_grey_300"
                     android:layout_width="match_parent"
@@ -79,7 +79,7 @@
                    app:layout_constraintTop_toTopOf="@+id/tv_carlicenseno"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_carlicenseno"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/dimen_text_size_datetime"
+                    android:textSize="@dimen/dimen_text_size_productionName"
                     tools:text="沪D12345"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -93,7 +93,7 @@
                     android:layout_marginTop="7dp"
                     app:layout_constraintLeft_toLeftOf="@+id/tv_carlicenseno"
                     app:layout_constraintTop_toBottomOf="@+id/v1"
-                    android:textSize="@dimen/dimen_text_size_datetime"
+                    android:textSize="@dimen/dimen_text_size_productionName"
                     tools:text="2017-12-12 10:10"
                     android:textColor="@color/color_grey_500"
                     android:singleLine="true"
@@ -108,7 +108,7 @@
                     android:layout_marginTop="5dp"
                     app:layout_constraintLeft_toLeftOf="@+id/tv_carlicenseno"
                     app:layout_constraintTop_toBottomOf="@+id/tv_starttime"
-                    android:textSize="@dimen/dimen_text_size_datetime"
+                    android:textSize="@dimen/dimen_text_size_productionName"
                     tools:text="2017-12-12 10:10"
                     android:textColor="@color/color_grey_500"
                     android:singleLine="true"
@@ -122,7 +122,7 @@
                    app:layout_constraintLeft_toRightOf="@+id/tv_starttime"
                     app:layout_constraintTop_toTopOf="@+id/tv_starttime"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_starttime"
-                    android:textSize="15sp"
+                    android:textSize="@dimen/dimen_text_size_productionName"
                     android:text="实发:"
                     android:textColor="@color/color_grey_500"
                     android:singleLine="true"
@@ -135,7 +135,7 @@
                     app:layout_constraintLeft_toRightOf="@+id/tv_endtime"
                     app:layout_constraintTop_toTopOf="@+id/tv_endtime"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_endtime"
-                    android:textSize="15sp"
+                    android:textSize="@dimen/dimen_text_size_productionName"
                     android:text="实收:"
                     android:textColor="@color/color_grey_500"
                     android:singleLine="true"
@@ -178,7 +178,7 @@
                 android:layout_marginTop="7dp"
                 app:layout_constraintLeft_toLeftOf="@+id/tv_endtime"
                 app:layout_constraintTop_toBottomOf="@+id/tv_endtime"
-                android:textSize="15sp"
+                android:textSize="14sp"
                     android:text="@{item_main_strans.trueNameCN2}"
                 android:textColor="@color/color_grey_500"
                 android:singleLine="true"
@@ -192,7 +192,7 @@
                     app:layout_constraintTop_toTopOf="@+id/tv_driver"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_driver"
                     android:id="@+id/tv_tel"
-                    android:textSize="15sp"
+                    android:textSize="14sp"
                     tools:text="100t"
                     android:textColor="@color/color_grey_500"
                     android:singleLine="true"
@@ -204,5 +204,5 @@
 
 
 
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
 </layout>
