--- a/heavycenter/src/main/res/layout/item_main_trans_detail.xml
+++ b/heavycenter/src/main/res/layout/item_main_trans_detail.xml
@@ -31,14 +31,14 @@
             android:background="@drawable/bg_hv_cirlce_stroke_yell"
             android:gravity="center"
             android:text="毛"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimen_text_size_unit"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
 
         <TextView
             tools:text="124"
-            android:textSize="19sp"
+            android:textSize="@dimen/dimen_text_size_productionName"
             android:textColor="@color/black"
             android:id="@+id/tv_mao"
             android:layout_width="wrap_content"
@@ -56,7 +56,7 @@
             android:id="@+id/tv_maotime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="17sp"
+            android:textSize="@dimen/dimen_text_size_unit"
             android:text="@{item_main_trans_detail.grossTimeCN}"
             app:layout_constraintRight_toLeftOf="@+id/lab_ck"
             android:layout_marginRight="5dp"
@@ -70,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="仓库"
-            android:textSize="17sp"
+            android:textSize="@dimen/dimen_text_size_productionName"
             app:layout_constraintLeft_toRightOf="@+id/midline"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -82,7 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             tools:text="A-15"
-            android:textSize="17sp"
+            android:textSize="@dimen/dimen_text_size_productionName"
             app:layout_constraintLeft_toRightOf="@+id/lab_ck"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -97,14 +97,14 @@
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="皮"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimen_text_size_unit"
             app:layout_constraintLeft_toLeftOf="@+id/lab_mao"
             app:layout_constraintTop_toBottomOf="@id/lab_mao" />
 
 
         <TextView
             tools:text="124"
-            android:textSize="19sp"
+            android:textSize="@dimen/dimen_text_size_productionName"
             app:layout_constraintBaseline_toBaselineOf="@+id/lab_pi"
             android:textColor="@color/black"
             android:id="@+id/tv_pi"
@@ -122,7 +122,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:textSize="17sp"
+            android:textSize="@dimen/dimen_text_size_unit"
             android:text="@{item_main_trans_detail.tareTimeCN}"
             app:layout_constraintBottom_toBottomOf="@+id/lab_pi"
             app:layout_constraintRight_toLeftOf="@+id/lab_bz"
@@ -136,7 +136,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="备注"
-            android:textSize="17sp"
+            android:textSize="@dimen/dimen_text_size_productionName"
             app:layout_constraintBottom_toBottomOf="@+id/lab_pi"
             app:layout_constraintLeft_toRightOf="@+id/midline" />
 
@@ -148,7 +148,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             tools:text="A-15"
-            android:textSize="17sp"
+            android:textSize="@dimen/dimen_text_size_productionName"
             app:layout_constraintBottom_toBottomOf="@+id/lab_pi"
             app:layout_constraintLeft_toRightOf="@+id/lab_bz" />
 
@@ -161,14 +161,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="扣"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimen_text_size_unit"
             app:layout_constraintLeft_toLeftOf="@+id/lab_mao"
             app:layout_constraintTop_toBottomOf="@id/lab_pi" />
 
 
         <TextView
             tools:text="124"
-            android:textSize="19sp"
+            android:textSize="@dimen/dimen_text_size_productionName"
             app:layout_constraintBaseline_toBaselineOf="@+id/lab_kou"
             android:textColor="@color/black"
             android:id="@+id/tv_kou"
@@ -187,7 +187,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:textSize="17sp"
+            android:textSize="@dimen/dimen_text_size_unit"
             android:text="@{item_main_trans_detail.deductTimeCN}"
             app:layout_constraintBottom_toBottomOf="@+id/lab_kou"
             app:layout_constraintLeft_toRightOf="@+id/tv_kou" />
@@ -200,7 +200,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="操作人"
-            android:textSize="17sp"
+            android:textSize="@dimen/dimen_text_size_productionName"
             app:layout_constraintBottom_toBottomOf="@+id/lab_kou"
             app:layout_constraintLeft_toRightOf="@+id/midline" />
 
@@ -212,7 +212,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             tools:text="A-15"
-            android:textSize="17sp"
+            android:textSize="@dimen/dimen_text_size_productionName"
             app:layout_constraintBottom_toBottomOf="@+id/lab_kou"
             app:layout_constraintLeft_toRightOf="@+id/lab_czr" />
 
@@ -226,14 +226,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="净"
-            android:textSize="16sp"
+            android:textSize="@dimen/dimen_text_size_unit"
             app:layout_constraintLeft_toLeftOf="@+id/lab_mao"
             app:layout_constraintTop_toBottomOf="@id/lab_kou" />
 
 
         <TextView
             tools:text="124"
-            android:textSize="19sp"
+            android:textSize="@dimen/dimen_text_size_productionName"
             app:layout_constraintBaseline_toBaselineOf="@+id/lab_jin"
             android:textColor="@color/black"
             android:id="@+id/tv_jin"
@@ -253,7 +253,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:text="10:00"
-            android:textSize="17sp"
+            android:textSize="@dimen/dimen_text_size_unit"
             app:layout_constraintBottom_toBottomOf="@+id/lab_jin"
             app:layout_constraintLeft_toRightOf="@+id/tv_jin" />
 
