--- a/heavycenter/src/main/res/layout/item_mana_car_my.xml
+++ b/heavycenter/src/main/res/layout/item_mana_car_my.xml
@@ -18,14 +18,14 @@
             sml:sml_scroller_duration="250">
 
         <TextView
-                android:textSize="22sp"
+                android:textSize="17sp"
                 android:gravity="center"
                 android:textColor="@color/white"
                 android:text="停用"
                 android:orientation="horizontal"
                 android:background="#66ddff00"
                 android:id="@id/smMenuViewRight"
-                android:layout_width="70dp"
+                android:layout_width="60dp"
                 android:weightSum="1"
                 android:layout_height="match_parent"/>
 
@@ -38,13 +38,14 @@
                 android:background="@drawable/bg_hv_sel_gray_white">
 
             <ImageView
-                    android:padding="5dp"
+                android:layout_margin="10dp"
                     android:id="@+id/iv_car"
                     sml:layout_constraintLeft_toLeftOf="parent"
                     sml:layout_constraintTop_toTopOf="parent"
+                sml:layout_constraintBottom_toBottomOf="parent"
                     android:src="@drawable/drawable_hv_sel_mana_car"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp" />
+                    android:layout_width="52dp"
+                    android:layout_height="52dp" />
 
             <TextView
                     android:layout_marginTop="5dp"
@@ -63,17 +64,19 @@
                     android:id="@+id/tv_emptyweight"
                     sml:layout_constraintLeft_toRightOf="@+id/tv_tv_carlicenseno"
                     sml:layout_constraintBottom_toBottomOf="@+id/tv_tv_carlicenseno"
+                sml:layout_constraintTop_toTopOf="@+id/tv_tv_carlicenseno"
                     android:singleLine="true"
                     android:layout_marginLeft="14dp"
                     android:textColor="@color/hv_color_text_title"
-                    android:textSize="@dimen/dimen_text_size_weight"
+                android:textSize="@dimen/dimen_text_size_productionName"
                     android:text='@{item_mana_car_my.emptyWeight+""}'
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             <TextView
                     android:layout_marginRight="10dp"
                     sml:layout_constraintRight_toRightOf="parent"
-                    sml:layout_constraintBottom_toBottomOf="@+id/tv_tv_carlicenseno"
+                sml:layout_constraintBottom_toBottomOf="@+id/tv_tv_carlicenseno"
+                sml:layout_constraintTop_toTopOf="@+id/tv_tv_carlicenseno"
                     android:singleLine="true"
                     android:layout_marginLeft="17dp"
                     android:textColor="@color/color_recylce_item_date_txtcolor"
@@ -87,12 +90,12 @@
             <TextView
                     android:id="@+id/tv_truename"
                     android:layout_marginTop="15dp"
-                    sml:layout_constraintTop_toBottomOf="@+id/tv_tv_carlicenseno"
+                    sml:layout_constraintBottom_toBottomOf="@+id/iv_car"
                     sml:layout_constraintLeft_toLeftOf="@+id/tv_tv_carlicenseno"
                     android:singleLine="true"
                     android:textColor="@color/color_grey_500"
                     android:textSize="@dimen/dimen_text_size_unit"
-                    android:text="@{item_mana_car_my.trueName}"
+                    android:text="@{item_mana_car_my.trueNameCN}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             <TextView
@@ -102,12 +105,12 @@
                     android:layout_marginLeft="15dp"
                     android:textColor="@color/color_grey_500"
                     android:textSize="@dimen/dimen_text_size_unit"
-                    android:text="@{item_mana_car_my.tel}"
+                    android:text="@{item_mana_car_my.telCN}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
             <View
-                    sml:layout_constraintBottom_toBottomOf="@+id/iv_car"
+                    sml:layout_constraintBottom_toBottomOf="parent"
                     sml:layout_constraintLeft_toLeftOf="parent"
                     sml:layout_constraintRight_toRightOf="parent"
                     android:background="@color/color_grey_300"
