--- a/heavycenter/src/main/res/layout/item_mana_good.xml
+++ b/heavycenter/src/main/res/layout/item_mana_good.xml
@@ -18,97 +18,87 @@
         sml:sml_scroller_duration="250">
 
     <TextView
-        android:textSize="22sp"
+        android:textSize="17sp"
         android:gravity="center"
         android:textColor="@color/white"
         android:text="停用"
         android:orientation="horizontal"
         android:background="@color/red"
         android:id="@id/smMenuViewRight"
-        android:layout_width="55dp"
+        android:layout_width="60dp"
         android:weightSum="1"
         android:layout_height="match_parent"/>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:foreground="?android:attr/selectableItemBackground"
         android:id="@id/smContentView"
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="5dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:gravity="center_vertical"
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline1"
             android:orientation="horizontal"
-            android:paddingBottom="5dp">
+            sml:layout_constraintGuide_percent="0.5"
+            android:layout_width="match_parent"
+            android:layout_height="1dp" />
 
-            <ImageView
-                android:src="@drawable/drawable_hv_sel_mana_good"
-                android:layout_width="70dp"
-                android:layout_height="70dp" />
-
-            <LinearLayout
-                android:layout_marginLeft="10dp"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <LinearLayout
-                    android:layout_weight="1"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp">
-                    <TextView
-                        android:text='@{item_mana_good.productName+"  "+item_mana_good.specifications}'
-                        android:singleLine="true"
-                        android:textColor="@color/hv_color_text_title"
-                        android:textSize="@dimen/dimen_recylce_item_title_txtsize"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+        <ImageView
+            android:id="@+id/ivleft"
+            android:layout_marginLeft="10dp"
+            sml:layout_constraintTop_toTopOf="parent"
+            sml:layout_constraintBottom_toBottomOf="parent"
+            sml:layout_constraintLeft_toLeftOf="parent"
+            android:src="@drawable/drawable_hv_sel_mana_good"
+            android:layout_width="55dp"
+            android:layout_height="55dp" />
 
 
-                    <View
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="1dp"/>
+        <TextView
+            android:id="@+id/productName"
+            android:layout_marginLeft="10dp"
+            sml:layout_constraintLeft_toRightOf="@+id/ivleft"
+           sml:layout_constraintBottom_toBottomOf="@+id/guideline1"
+            android:layout_marginBottom="5dp"
+            android:text='@{item_mana_good.productName+"  "+item_mana_good.specifications}'
+            android:singleLine="true"
+            android:textColor="@color/hv_color_text_title"
+            android:textSize="@dimen/dimen_text_size_productionName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-                    <TextView
-                        android:text="@{item_mana_good.warehouseName}"
-                        android:singleLine="true"
-                        android:textColor="@color/color_grey_500"
-                        android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+        <TextView
+            android:layout_marginRight="10dp"
+            sml:layout_constraintRight_toRightOf="parent"
+            sml:layout_constraintTop_toTopOf="@+id/productName"
+            sml:layout_constraintBottom_toBottomOf="@+id/productName"
+            android:text="@{item_mana_good.warehouseName}"
+            android:singleLine="true"
+            android:textColor="@color/color_grey_500"
+            android:textSize="@dimen/dimen_text_size_unit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-                </LinearLayout>
+        <TextView
+            sml:layout_constraintLeft_toLeftOf="@+id/productName"
+           sml:layout_constraintTop_toBottomOf="@+id/guideline1"
+            android:layout_marginTop="5dp"
+            android:text='@{"送货区域: "+item_mana_good.belongArea}'
+            android:id="@+id/tv_minstock"
+            android:layout_weight="1"
+            android:singleLine="true"
+            android:textColor="@color/gray"
+            android:textSize="@dimen/dimen_text_size_unit"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
 
-                <LinearLayout
-                    android:layout_weight="1"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp">
-                    <TextView
-                        android:text='@{"送货区域: "+item_mana_good.belongArea}'
-                        android:id="@+id/tv_minstock"
-                        android:layout_weight="1"
-                        android:singleLine="true"
-                        android:textColor="@color/gray"
-                        android:textSize="@dimen/dimen_recylce_item_content_txtsize"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content" />
-
-                </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
         <View
-            android:layout_alignParentBottom="true"
+            sml:layout_constraintLeft_toLeftOf="parent"
+            sml:layout_constraintBottom_toBottomOf="parent"
             android:background="@color/color_grey_400"
             android:layout_width="match_parent"
             android:layout_height="1px"/>
-    </RelativeLayout>
+
+    </android.support.constraint.ConstraintLayout>
 
     </com.tubb.smrv.SwipeHorizontalMenuLayout>
 </layout>
