--- a/heavycenter/src/main/res/layout/item_mana_store.xml
+++ b/heavycenter/src/main/res/layout/item_mana_store.xml
@@ -16,95 +16,88 @@
 
     <TextView
             android:layout_gravity="right"
-            android:textSize="22sp"
+            android:textSize="17sp"
             android:gravity="center"
             android:textColor="@color/white"
             android:text="停用"
             android:orientation="horizontal"
             android:background="@color/red"
         android:id="@id/smMenuViewRight"
-            android:layout_width="70dp"
+            android:layout_width="60dp"
             android:weightSum="1"
             android:layout_height="match_parent"/>
-        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@id/smContentView"
             android:foreground="?android:attr/selectableItemBackground"
             android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <LinearLayout
+
+
+            <android.support.constraint.Guideline
+                android:id="@+id/guideline1"
+                android:orientation="horizontal"
+                sml:layout_constraintGuide_percent="0.5"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:src="@drawable/drawable_hv_sel_mana_store"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp" />
-
-                <LinearLayout
-                    android:layout_marginLeft="10dp"
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <LinearLayout
-                        android:layout_weight="1"
-                        android:orientation="horizontal"
-                        android:gravity="center_vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp">
-                        <TextView
-                            android:singleLine="true"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/dimen_recylce_item_title_txtsize"
-                            android:text="@{item_mana_store.warehouseName}"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
+                android:layout_height="1dp" />
 
 
-                        <View
-                            android:layout_weight="1"
-                            android:layout_width="0dp"
-                            android:layout_height="1dp"/>
+            <ImageView
+                android:layout_marginLeft="10dp"
+                sml:layout_constraintTop_toTopOf="parent"
+                sml:layout_constraintBottom_toBottomOf="parent"
+                sml:layout_constraintLeft_toLeftOf="parent"
+                android:id="@+id/ivleft"
+                android:src="@drawable/drawable_hv_sel_mana_store"
+                android:layout_width="55dp"
+                android:layout_height="55dp" />
 
-                    </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_weight="1"
-                        android:orientation="horizontal"
-                        android:gravity="center_vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp">
-                        <TextView
-                            android:id="@+id/tv_minstock"
-                            android:layout_weight="1"
-                            android:singleLine="true"
-                            android:textColor="@color/gray"
-                            android:textSize="@dimen/dimen_recylce_item_content_txtsize"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/storename"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="5dp"
+                sml:layout_constraintBottom_toBottomOf="@+id/guideline1"
+                sml:layout_constraintLeft_toRightOf="@+id/ivleft"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textSize="@dimen/dimen_text_size_productionName"
+                android:text="@{item_mana_store.warehouseName}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-                        <TextView
-                            android:id="@+id/tv_maxstock"
-                            android:layout_weight="1"
-                            android:layout_marginLeft="10dp"
-                            android:singleLine="true"
-                            android:textColor="@color/gray"
-                            android:textSize="@dimen/dimen_recylce_item_content_txtsize"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content" />
-                    </LinearLayout>
-                </LinearLayout>
-            </LinearLayout>
-            <View
-                android:layout_alignParentBottom="true"
-                android:background="@color/color_grey_400"
-                android:layout_width="match_parent"
-                android:layout_height="1px"/>
-        </RelativeLayout>
+
+            <TextView
+                sml:layout_constraintTop_toBottomOf="@+id/guideline1"
+                android:layout_marginTop="5dp"
+              sml:layout_constraintLeft_toLeftOf="@+id/storename"
+                sml:layout_constraintRight_toLeftOf="@+id/tv_maxstock"
+                android:id="@+id/tv_minstock"
+                android:layout_weight="1"
+                android:singleLine="true"
+                android:textColor="@color/gray"
+                android:textSize="@dimen/dimen_text_size_productionName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+
+
+            <TextView
+                sml:layout_constraintTop_toTopOf="@+id/tv_minstock"
+                sml:layout_constraintBottom_toBottomOf="@+id/tv_minstock"
+               sml:layout_constraintLeft_toRightOf="@+id/tv_minstock"
+                sml:layout_constraintRight_toRightOf="parent"
+                android:layout_marginRight="10dp"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:id="@+id/tv_maxstock"
+                android:layout_weight="1"
+                android:layout_marginLeft="10dp"
+                android:singleLine="true"
+                android:textColor="@color/gray"
+                android:textSize="@dimen/dimen_text_size_productionName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+
+        </android.support.constraint.ConstraintLayout>
 
     </com.tubb.smrv.SwipeHorizontalMenuLayout>
 </layout>
