--- a/heavycenter/src/main/res/layout/item_myce_unit_new.xml
+++ b/heavycenter/src/main/res/layout/item_myce_unit_new.xml
@@ -9,8 +9,7 @@
       >
 
     <TextView
-            android:layout_marginTop="13dp"
-            android:layout_marginBottom="13dp"
+        app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/tv_left"
@@ -24,6 +23,7 @@
 
 
     <LinearLayout
+        android:gravity="center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/tv_left"
@@ -32,7 +32,7 @@
             android:id="@+id/txtcontainer"
             android:layout_marginLeft="15dp"
             android:layout_width="0dp"
-            android:layout_height="0dp"/>
+            android:layout_height="40dp"/>
 
 
     <ImageView
@@ -46,9 +46,8 @@
 
 
     <View
+        app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_left"
             android:layout_marginLeft="8dp"
             android:id="@+id/divide"
             android:background="@color/color_item_content_gap"
