--- a/heavycenter/src/main/res/layout/item_myce_unit_new_city.xml
+++ b/heavycenter/src/main/res/layout/item_myce_unit_new_city.xml
@@ -30,16 +30,18 @@
         android:layout_height="wrap_content">
 
         <com.siweisoft.heavycenter.module.view.image.TypeImage
+            android:padding="5dp"
             android:id="@+id/typeimage"
-            android:layout_width="17dp"
-            android:layout_height="17dp" />
+            android:layout_width="25dp"
+            android:layout_height="25dp" />
 
         <com.siweisoft.heavycenter.module.view.text.MarqTextView
             android:id="@+id/tv_name"
             android:layout_weight="1"
             android:singleLine="true"
-            android:textSize="16sp"
-            android:textColor="@color/black"
+            android:gravity="center_vertical"
+            android:textSize="@dimen/dimen_text_size_unit"
+            android:textColor="@color/color_grey_700"
             android:layout_marginLeft="10dp"
             android:text="@{item_myce_unit_new_city.value}"
             android:layout_width="0dp"
