--- a/heavycenter/src/main/res/layout/item_myce_unit_new_edit.xml
+++ b/heavycenter/src/main/res/layout/item_myce_unit_new_edit.xml
@@ -2,8 +2,9 @@
 <EditText
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:singleLine="true"
-        android:textSize="15sp"
+        android:textSize="14.5sp"
         android:id="@+id/txt"
+    android:gravity="center_vertical"
     android:textColor="@color/color_grey_400"
         android:background="@null"
         android:layout_width="match_parent"
