--- a/heavycenter/src/main/res/layout/frag_main_weigt.xml
+++ b/heavycenter/src/main/res/layout/frag_main_weigt.xml
@@ -9,6 +9,7 @@
     </data>
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/color_hv_base"
@@ -36,11 +37,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                tools:text="hu12444"
                 android:id="@+id/tv_carno"
                 android:gravity="right|center_vertical"
                 android:layout_weight="1"
                 android:textColor="@color/color_hv_yelll"
-                android:textSize="@dimen/hv_dimen_text_title_aa"
+                android:textSize="16sp"
                 android:text="@{frag_main_weigt.order.carLicenseNo}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" />
@@ -50,7 +52,7 @@
                 android:gravity="center"
                 android:layout_weight="1"
                 android:textColor="@color/color_hv_yelll"
-                android:textSize="@dimen/hv_dimen_text_title_aa"
+                android:textSize="16sp"
                 android:text="@{frag_main_weigt.order.trueName}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" />
@@ -60,7 +62,7 @@
                 android:gravity="center_vertical|left"
                 android:layout_weight="1"
                 android:textColor="@color/color_hv_yelll"
-                android:textSize="@dimen/hv_dimen_text_title_aa"
+                android:textSize="16sp"
                 android:text="@{frag_main_weigt.order.tel}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" />
@@ -124,8 +126,8 @@
         <TextView
                 android:includeFontPadding="false"
             app:layout_constraintBottom_toTopOf="@+id/lab_mz"
-           app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/tv_pz"
+           app:layout_constraintLeft_toLeftOf="@+id/lab_mz"
+            app:layout_constraintRight_toRightOf="@+id/lab_mz"
             android:id="@+id/tv_mz"
             android:gravity="center"
             android:layout_weight="1"
@@ -137,9 +139,9 @@
 
         <TextView
                 android:includeFontPadding="false"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_mz"
-            app:layout_constraintLeft_toRightOf="@+id/tv_mz"
-            app:layout_constraintRight_toLeftOf="@+id/tv_kc"
+            app:layout_constraintBottom_toTopOf="@+id/lab_pz"
+            app:layout_constraintLeft_toLeftOf="@+id/lab_pz"
+            app:layout_constraintRight_toRightOf="@+id/lab_pz"
             android:id="@+id/tv_pz"
             android:gravity="center"
             android:layout_weight="1"
@@ -151,9 +153,9 @@
 
         <TextView
                 android:includeFontPadding="false"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_mz"
-            app:layout_constraintLeft_toRightOf="@+id/tv_pz"
-            app:layout_constraintRight_toLeftOf="@+id/tv_jz"
+            app:layout_constraintBottom_toTopOf="@+id/lab_kc"
+            app:layout_constraintLeft_toLeftOf="@+id/lab_kc"
+            app:layout_constraintRight_toRightOf="@+id/lab_kc"
             android:id="@+id/tv_kc"
             android:gravity="center"
             android:layout_weight="1"
@@ -166,9 +168,9 @@
 
         <TextView
                 android:includeFontPadding="false"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_mz"
-            app:layout_constraintLeft_toRightOf="@+id/tv_kc"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/lab_jz"
+            app:layout_constraintLeft_toLeftOf="@+id/lab_jz"
+            app:layout_constraintRight_toRightOf="@+id/lab_jz"
             android:id="@+id/tv_jz"
             android:gravity="center"
             android:layout_weight="1"
