--- a/heavycenter/src/main/res/layout/item_myce_unit_new_edit.xml
+++ b/heavycenter/src/main/res/layout/item_myce_unit_new_edit.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <EditText
+    android:imeOptions="flagNoExtractUi"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:singleLine="true"
         android:textSize="14.5sp"
